# Intel_BYT_SNA64_EMGD_V37.40.25_RC_2015-06-02_3900

Fedora18/: emgd-drm-2.0-3900.x86_64.rpm  emgd-sna-2.0-3900.x86_64.rpm  ipvr-2.0-3900.x86_64.rpm  libva-wrapper-2.0-3900.x86_64.rpm  psb_video-2.0-3900.x86_64.rpm
Utilities/: emgdgui.tgz
Utilities/emgdgui/emgdgui/: README.txt  emgduid
common/drm/: emgd_drm.tgz
common/drm/emgd_drm/: Makefile
common/ext_ipvr/: ipvr.tgz
common/ext_ipvr/ipvr/: Makefile  ipvr_bo.c  ipvr_bo.h  ipvr_drm.h  ipvr_drv.c  ipvr_drv.h  ipvr_exec.c  ipvr_fence.c  ipvr_gem.c  ved_cmd.c  ved_fw.c
common/src/emgdgui/: emgdgui_src.tgz
common/src/ext_psb_video/psb_video/src/: Makefile  Makefile.am  Makefile.in  config.h  ipvr_execbuf.c  ipvr_execbuf.h  object_heap.c  pnw_rotate.c  pnw_rotate.h  psb_drv_debug.c  psb_drv_debug.h  psb_drv_video.c  psb_drv_video.h  psb_output.c  psb_output.h  psb_surface.c  psb_surface.h  psb_surface_ext.h  tng_VP8.c  tng_VP8.h  tng_vld_dec.c  tng_vld_dec.h  tng_yuv_processor.c  ved_execbuf.c  ved_execbuf.h  vxd_drm.h
common/src/ext_psb_video/psb_video/src/.deps/: ipvr_execbuf.Plo  object_heap.Plo  pnw_rotate.Plo  psb_drv_debug.Plo  psb_drv_video.Plo  psb_output.Plo  psb_surface.Plo  tng_VP8.Plo  tng_vld_dec.Plo  tng_yuv_processor.Plo  ved_execbuf.Plo
common/src/ext_psb_video/psb_video/src/hwdefs/: dxva_fw_ctrl.h  dxva_fw_flags.h  msvdx_cmds_io2.h  msvdx_core_regs_io2.h  msvdx_offsets.h  msvdx_vec_reg_io2.h  mvea_regs.h
patches/common/LibDRM/: libDRM_2_4_34_VLV_Support  libDRM_2_4_39_Atomic_Support  libDRM_2_4_39_VLV_Support  libDRM_2_4_52_Atomic_Support
patches/common/MESA_i965/: 0001-Add_RGB565_support_in_buffer_allocation_MESA_10_0_1.patch  0001-Add_RGB565_support_in_buffer_allocation_MESA_10_2_1.patch  0001-Add_RGB565_support_in_buffer_allocation_MESA_9_1_1.patch  0001-NULL-check-for-eglCreateWindowSurface_10_0_1.patch  0001-NULL-check-for-eglCreateWindowSurface_9_1_1.patch  0001-glx-Fix-the-default-values-for-GLXFBConfig-attribute_10_0_1.patch  MESA_OGL_Dri_8_0_4_VLV_Support  MESA_OGL_Dri_9.1.1_VLV_Support  MESA_OGL_Dri_9.1_VLV_Support  MESA_OGL_Dri_9.2.0_VLV_Support
patches/common/VA_Driver_i965/: Gst_Codecparser_VAAPI_0_5_10_Disable_SCEP_Removing_In_SEI_Parsing.Patch  Intel_VA_Driver_1_0_20_VLV_Support  (+3 more)
patches/drm/: EMGD_CHANGES.txt
(+436 files in other folders)
